--- a/style.css
+++ b/style.css
@@ -2892,7 +2892,7 @@ body:not(.dark) .footer {
 
 .footer-bottom {
 	display: flex;
-	justify-content: space-between;
+	justify-content: center;
 	align-items: center;
 	padding-top: 2rem;
 	border-top: 1px solid var(--border);
